# rpg-game

./: .gitignore  Cargo.toml  README.md
ai/: Modelfile
src/: app.rs  character.rs  communication.rs  item.rs  llm.rs  main.rs  npc.rs  player.rs  scene.rs  talk.rs
src/npc/: mod.rs  npc.rs  npc_plugin.rs
src/player/: actions_plugin.rs  camera_plugin.rs  mod.rs  movement_plugin.rs  player.rs  player_plugin.rs
tts/: .gitignore  main.py  pyproject.toml  server.py  tts.py
