[package]
name = "rpg-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_rapier3d = { version = "0.27.0", features = ["debug-render"] }
nalgebra = "0.33.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
