[package]
name = "rpg-game"
version = "0.1.0"
edition = "2021"

[dependencies]
fancy-regex = "0.13.0"
bevy = { version = "0.14.2", features = ["wav"] }
bevy_rapier3d = { version = "0.27.0", features = ["debug-render"] }
nalgebra = "0.33.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
serde_json_any_key = "2.0.0"
bevy-tokio-tasks = "0.14.0"
bevy_mod_billboard = "0.7.0"
